--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
   
   .cup {
     border: 1px solid black;
-    width: 88px;
-    height: 92px;
+    width: 65px;
+    height: 70px;
     
   }
   
   .top-cup {
     position: absolute;
-    top: 100px;
-    left: 50px;
+    top: 193px;
+    left: 243px;
   }
   
   .bottom-cup {
   position: absolute;
-  top: 200px;
-  left: 50px;
+  top: 260px;
+  left: 243px;
   }
   
   .triangle {
@@ -55,13 +55,62 @@
     clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
   	transform: translate(-55%, 0px);
   }
+  
+  .cafetera {
+  position: absolute;
+  top: 50px;
+  left: 30px;
+  width: 150px;
+  height: 200px;
+  background-color: orange;
+  border-radius: 10px;
+}
+ 
+	.bustello {
+  border: 1px solid black;
+ 	width: 150px;
+  height: 200px;
+  background-color: yellow;
+  border-radius: 5px;
+  position: relative;
+  margin-bottom: 20px;
+}
+  
+	.red-stripe {
+	position: absolute;
+	bottom: 0px;
+	left: 0; 
+  background-color: red;
+  width: 100%;
+  height: 65px; 
+  border-bottom-left-radius: 5px; 
+  border-bottom-right-radius: 5px; 
+/*   transform: translate(-55%, 0px); */
+}
+  
+  .bustello-left {
+  position: absolute;
+  top: 130px;
+  left: 170px;
+}
+  
+  .bustello-right {
+  position: absolute;
+  top: 145px;
+  left: 305px;
+}
+
 
 </style>
 
 <div class="frame">
   <div class="cafetera"></div>
-	<div class="bustello"></div>
-  <div class="bustello"></div>
+	<div class="bustello bustello-left">
+   <div class="red-stripe"></div>
+  	</div>
+  <div class="bustello bustello-right">
+   <div class="red-stripe"></div>
+  	</div>
   <div class="cup top-cup">
     <div class="triangle">
     	<div class="star"></div>
