--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     border: 1px solid black;
     width: 65px;
     height: 70px;
-    
+    background: linear-gradient(blue 0%, blue 20%, white 20%, white 40%, blue 40%, blue 60%, white 60%, white 80%, blue 80%, blue 100%);
   }
   
   .top-cup {
@@ -56,7 +56,7 @@
   	transform: translate(-55%, 0px);
   }
   
-  .cafetera {
+/*   .cafetera {
   position: absolute;
   top: 50px;
   left: 30px;
@@ -64,8 +64,66 @@
   height: 200px;
   background-color: orange;
   border-radius: 10px;
+} */
+  
+/*width: 100px;
+  height: 0;
+  border-bottom: 50px solid blue; 
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+} */
+  
+  .cafetera {
+/*     background-color: orange;
+    border: 1px solid black;
+    position: relative; */
+   	top: 0px;
+    left: 0px;
+/*  width: 150px;
+    height: 200px;
+    border-radius: 15px; */
+    width: 200px;
+    height: 0px;
+    border-bottom: 200px solid; 
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+  }
+
+  .base {
+    border: 1px solid black;
+    background-color: #a7a7a7;
+    position: relative;
+    bottom: -200px;
+    left: 3px;
+    width: 100%;
+    height: 90px;
+    border-radius: 30px 30px 0 0;
+  }
+
+  .top {
+    border: 1px solid black;
+    background-color: #7e7e7e;
+    position: absolute;
+    top: -10px;
+    left: 0px;
+    width: 150px;
+  	height: 24px;
+    border-radius: 0 0 20px 20px;
+    transform: translateY(-50%);
+  	border-top-left-radius: 50px;
+  	border-top-right-radius: 50px;
+  }
+
+  .handle {
+  position: absolute;
+  top: 40px;
+  left: -70px;
+  width: 40px;
+  height: 120px;
+  background-color: #a7a7a7;
+  border-radius: 20px;
 }
- 
+
 	.bustello {
   border: 1px solid black;
  	width: 150px;
@@ -104,7 +162,11 @@
 </style>
 
 <div class="frame">
-  <div class="cafetera"></div>
+  <div class="cafetera">
+  <div class="base"></div>
+  <div class="top"></div>
+  <div class="handle"></div>
+	</div>
 	<div class="bustello bustello-left">
    <div class="red-stripe"></div>
   	</div>
