--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
   border-right: 25px solid transparent;
 } */
   
+  .container {
+  margin-top: 100px; /* Adjust the margin to move the shape downwards */
+}
   .cafetera {
-/*     background-color: orange;
-    border: 1px solid black;
+/*     border: 1px solid black;
     position: relative; */
    	top: 0px;
     left: 0px;
@@ -84,40 +86,43 @@
     border-radius: 15px; */
     width: 200px;
     height: 0px;
-    border-bottom: 200px solid; 
+    border-bottom: 200px solid orange; 
     border-left: 25px solid transparent;
     border-right: 25px solid transparent;
+    transform: rotate(180deg);
   }
 
   .base {
     border: 1px solid black;
     background-color: #a7a7a7;
     position: relative;
-    bottom: -200px;
-    left: 3px;
-    width: 100%;
+    bottom: 90px;
+    left: -20px;
+    width: 170px;
     height: 90px;
     border-radius: 30px 30px 0 0;
+    transform: rotate(180deg);
   }
 
   .top {
     border: 1px solid black;
     background-color: #7e7e7e;
     position: absolute;
-    top: -10px;
-    left: 0px;
-    width: 150px;
+    top: 200px;
+    left: -25px;
+    width: 200px;
   	height: 24px;
     border-radius: 0 0 20px 20px;
-    transform: translateY(-50%);
+/*     transform: translateY(-50%); */
   	border-top-left-radius: 50px;
   	border-top-right-radius: 50px;
+    transform: rotate(180deg);
   }
 
   .handle {
   position: absolute;
   top: 40px;
-  left: -70px;
+  left: 200px;
   width: 40px;
   height: 120px;
   background-color: #a7a7a7;
@@ -162,11 +167,13 @@
 </style>
 
 <div class="frame">
-  <div class="cafetera">
-  <div class="base"></div>
-  <div class="top"></div>
+  <div class="container">
+  	<div class="cafetera">
+  		<div class="base"></div>
+  		<div class="top"></div>
   <div class="handle"></div>
-	</div>
+		</div>
+  </div>
 	<div class="bustello bustello-left">
    <div class="red-stripe"></div>
   	</div>
