--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     background: linear-gradient(blue 0%, blue 20%, white 20%, white 40%, blue 40%, blue 60%, white 60%, white 80%, blue 80%, blue 100%);
   }
   
+   .other-cup {
+    position: absolute;
+    top: 59px;
+    left: 213px;
+    border: 1px solid black;
+    width: 65px;
+    height: 70px;
+    background: linear-gradient(blue 0%, blue 20%, white 20%, white 40%, blue 40%, blue 60%, white 60%, white 80%, blue 80%, blue 100%);
+  }
+  
   .top-cup {
     position: absolute;
     top: 193px;
@@ -76,57 +86,75 @@
   .container {
   margin-top: 100px; /* Adjust the margin to move the shape downwards */
 }
-  .cafetera {
-/*     border: 1px solid black;
-    position: relative; */
+/*   .cafetera {
+    position: relative;
+		border: 1px solid black;
    	top: 0px;
     left: 0px;
-/*  width: 150px;
-    height: 200px;
-    border-radius: 15px; */
     width: 200px;
     height: 0px;
-    border-bottom: 200px solid orange; 
+    border-bottom: 200px solid orange;
     border-left: 25px solid transparent;
     border-right: 25px solid transparent;
     transform: rotate(180deg);
+  } */
+  
+  .cafetera {
+    position: absolute;
+		border: 1px solid black;
+   	top: 90px;
+    left: 0px;
+    width: 200px;
+    height: 200px;
+/*     background-color: orange; */
+    clip-path: polygon(0 0, 100% 0, 88% 86%, 14% 86%);
+    background-image: linear-gradient(90deg, #f68043 0%, #f79c1d 25%, #e06423 25%, #db8714 50%, #e06423 50%, #db8714 75%, #e09023 75%, #FF6347 100%);
   }
 
   .base {
-    border: 1px solid black;
-    background-color: #a7a7a7;
+/*     border: 1px solid black; */
+		background: linear-gradient(90deg, rgba(180,180,180,1) 22%, rgba(255,254,246,1) 45%, rgba(170,170,170,1) 84%);
     position: relative;
-    bottom: 90px;
-    left: -20px;
-    width: 170px;
-    height: 90px;
+    top: 145px;
+    left: 3px;
+    width: 200px;
+    height: 110px;
     border-radius: 30px 30px 0 0;
-    transform: rotate(180deg);
+/*     transform: rotate(180deg); */
   }
 
   .top {
-    border: 1px solid black;
-    background-color: #7e7e7e;
+    background: linear-gradient(90deg, rgba(247,100,29,1) 9%, rgba(255,137,36,1) 43%, rgba(255,114,16,1) 77%);
     position: absolute;
-    top: 200px;
-    left: -25px;
-    width: 200px;
+    top: 70px;
+    left: -5px;
+    width: 210px;
   	height: 24px;
     border-radius: 0 0 20px 20px;
 /*     transform: translateY(-50%); */
   	border-top-left-radius: 50px;
   	border-top-right-radius: 50px;
-    transform: rotate(180deg);
+/*     transform: rotate(180deg); */
   }
 
   .handle {
   position: absolute;
-  top: 40px;
-  left: 200px;
-  width: 40px;
-  height: 120px;
-  background-color: #a7a7a7;
-  border-radius: 20px;
+  top: 69px;
+  left: -90px;
+  width: 150px;
+  height: 190px;
+  background-color: black;
+  clip-path: polygon(80% 13%, 55% 14%, 35% 24%, 26% 38%, 20% 56%, 19% 73%, 20% 84%, 34% 84%, 33% 73%, 33% 59%, 35% 46%, 44% 36%, 58% 30%, 81% 29%);
+}
+  
+  .spout {
+  position: absolute;
+  background-color: #ff8924;
+  top: 93px;
+  left: 189px;
+  width: 60px;
+  height: 90px;
+  clip-path: polygon(0 0, 0 81%, 63% 0);
 }
 
 	.bustello {
@@ -167,19 +195,20 @@
 </style>
 
 <div class="frame">
-  <div class="container">
-  	<div class="cafetera">
-  		<div class="base"></div>
-  		<div class="top"></div>
-  <div class="handle"></div>
-		</div>
-  </div>
+  <div class="other-cup"></div>
 	<div class="bustello bustello-left">
    <div class="red-stripe"></div>
   	</div>
   <div class="bustello bustello-right">
    <div class="red-stripe"></div>
   	</div>
+  <div class="container">
+    <div class="handle"></div>
+  	<div class="cafetera"></div>
+  	<div class="base"></div>
+  	<div class="top"></div>
+    <div class="spout"></div>
+  </div>
   <div class="cup top-cup">
     <div class="triangle">
     	<div class="star"></div>
