added handles to cups

--- a/index.html
+++ b/index.html
@@ -25,6 +25,30 @@
     background: linear-gradient(blue 0%, blue 20%, white 20%, white 40%, blue 40%, blue 60%, white 60%, white 80%, blue 80%, blue 100%);
   }
   
+    .star {
+    background-color: white;
+    width: 45%;
+    height: 25%;
+    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  	transform: translate(-55%, 0px);
+  }
+  
+  .cup-handle {
+    width: 70%;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(255,244,239,1) 9%, rgba(201,191,182,1) 43%, rgba(233,228,225,1) 77%);
+    clip-path: polygon(96% 10%, 81% 9%, 63% 11%, 44% 18%, 38% 34%, 37% 47%, 40% 62%, 51% 72%, 65% 76%, 77% 78%, 89% 78%, 100% 78%, 100% 65%, 87% 65%, 74% 64%, 63% 63%, 55% 59%, 50% 51%, 48% 38%, 53% 26%, 65% 23%, 80% 22%, 97% 22%);
+  	transform: translate(-100%, -60px);
+  }
+  
+    .other-cup-handle {
+    width: 70%;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(255,244,239,1) 9%, rgba(201,191,182,1) 43%, rgba(233,228,225,1) 77%);
+    clip-path: polygon(96% 10%, 81% 9%, 63% 11%, 44% 18%, 38% 34%, 37% 47%, 40% 62%, 51% 72%, 65% 76%, 77% 78%, 89% 78%, 100% 78%, 100% 65%, 87% 65%, 74% 64%, 63% 63%, 55% 59%, 50% 51%, 48% 38%, 53% 26%, 65% 23%, 80% 22%, 97% 22%);
+  	transform: translate(63px, 2px) scaleX(-1);
+  }
+  
    .other-cup {
     position: absolute;
     top: 59px;
@@ -156,6 +180,17 @@
   height: 90px;
   clip-path: polygon(0 0, 0 81%, 63% 0);
 }
+  
+  .lid {
+  position: absolute;
+  background-color: black;
+  top: 40px;
+  left: 85px;
+  width: 90px;
+  height: 100px;
+  clip-path: polygon(1% 0, 45% 0, 35% 31%, 10% 31%);
+    
+  }
 
 	.bustello {
   border: 1px solid black;
@@ -195,7 +230,9 @@
 </style>
 
 <div class="frame">
-  <div class="other-cup"></div>
+  <div class="other-cup">
+    <div class="other-cup-handle"></div>
+  </div>
 	<div class="bustello bustello-left">
    <div class="red-stripe"></div>
   	</div>
@@ -207,6 +244,7 @@
   	<div class="cafetera"></div>
   	<div class="base"></div>
   	<div class="top"></div>
+    <div class="lid"></div>
     <div class="spout"></div>
   </div>
   <div class="cup top-cup">
@@ -214,10 +252,13 @@
     	<div class="star"></div>
     </div>
     <div class="stripes"></div>
+    <div class="cup-handle"></div>
   </div>
   <div class="cup bottom-cup">
   		<div class="triangle">
     	<div class="star"></div>
+      </div>
+      <div class="cup-handle"></div>
     	</div>
     <div class="stripes"></div>
   </div>
