--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		margin: 0;    
   }
   
-  
   .frame {
     position: relative;
     width: 500px;
@@ -23,14 +22,6 @@
     width: 65px;
     height: 70px;
     background: linear-gradient(blue 0%, blue 20%, white 20%, white 40%, blue 40%, blue 60%, white 60%, white 80%, blue 80%, blue 100%);
-  }
-  
-    .star {
-    background-color: white;
-    width: 45%;
-    height: 25%;
-    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  	transform: translate(-55%, 0px);
   }
   
   .cup-handle {
@@ -61,14 +52,14 @@
   
   .top-cup {
     position: absolute;
-    top: 193px;
-    left: 243px;
+    top: 200px;
+    left: 240px;
   }
   
   .bottom-cup {
   position: absolute;
-  top: 260px;
-  left: 243px;
+  top: 270px;
+  left: 240px;
   }
   
   .triangle {
@@ -90,39 +81,9 @@
   	transform: translate(-55%, 0px);
   }
   
-/*   .cafetera {
-  position: absolute;
-  top: 50px;
-  left: 30px;
-  width: 150px;
-  height: 200px;
-  background-color: orange;
-  border-radius: 10px;
-} */
-  
-/*width: 100px;
-  height: 0;
-  border-bottom: 50px solid blue; 
-  border-left: 25px solid transparent;
-  border-right: 25px solid transparent;
-} */
-  
   .container {
   margin-top: 100px; /* Adjust the margin to move the shape downwards */
 }
-/*   .cafetera {
-    position: relative;
-		border: 1px solid black;
-   	top: 0px;
-    left: 0px;
-    width: 200px;
-    height: 0px;
-    border-bottom: 200px solid orange;
-    border-left: 25px solid transparent;
-    border-right: 25px solid transparent;
-    transform: rotate(180deg);
-  } */
-  
   .cafetera {
     position: absolute;
 		border: 1px solid black;
@@ -134,6 +95,7 @@
     clip-path: polygon(0 0, 100% 0, 88% 86%, 14% 86%);
     background-image: linear-gradient(90deg, #f68043 0%, #f79c1d 25%, #e06423 25%, #db8714 50%, #e06423 50%, #db8714 75%, #e09023 75%, #FF6347 100%);
   }
+  
 
   .base {
 /*     border: 1px solid black; */
@@ -196,17 +158,77 @@
   border: 1px solid black;
  	width: 150px;
   height: 200px;
-  background-color: yellow;
+  background: linear-gradient(90deg, rgba(255,225,6,1) 9%, rgba(243,255,13,1) 43%, rgba(255,224,2,1) 79%);
   border-radius: 5px;
   position: relative;
   margin-bottom: 20px;
+}
+  
+  .bustello::before {
+  content: "CAFE BUSTELLO";
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 29px;
+  color: black;
+}
+  
+  .bustello-lid {
+  position: absolute;
+  border: 1px solid black;
+  background-color: #ffe002;
+  top: -3%;
+  left: -4%;
+  width: 160px; /* Adjust width as needed */
+  height: 10px; /* Adjust height as needed */
+}
+  
+	.small-text {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -25%);
+  font-size: 12px; 
+  color: black;
+  white-space: nowrap;
+}
+  
+	.white-text {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -25%);
+  font-size: 7px; 
+  color: white;
+  white-space: nowrap;
+}
+  
+  .yellow-text {
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -25%);
+  font-size: 6px; 
+  color: yellow;
+  white-space: nowrap;
+}
+  
+  .weight-text {
+  position: absolute;
+  top: 95%;
+  left: 50%;
+  transform: translate(-50%, -25%);
+  font-size: 8px; 
+  color: white;
+  white-space: nowrap;
 }
   
 	.red-stripe {
 	position: absolute;
 	bottom: 0px;
 	left: 0; 
-  background-color: red;
+  background: linear-gradient(90deg, rgba(193,11,0,1) 9%, rgba(212,35,15,1) 43%, rgba(200,23,23,1) 79%);
   width: 100%;
   height: 65px; 
   border-bottom-left-radius: 5px; 
@@ -235,10 +257,20 @@
   </div>
 	<div class="bustello bustello-left">
    <div class="red-stripe"></div>
+    <div class="small-text">Espresso Ground Coffee</div>
+    <div class="white-text">ALWAYS PURE AND FLAVORFUL, LIKE NO OTHER</div>
+    <div class="weight-text"> NET WT 10 OZ (283g)</div>
+    <div class="bustello-lid"></div>
   	</div>
   <div class="bustello bustello-right">
    <div class="red-stripe"></div>
+    <div class="small-text">Espresso Ground Coffee</div>
+    <div class="white-text">ALWAYS PURE AND FLAVORFUL, LIKE NO OTHER</div>
+    <div class="yellow-text">VACUUM PACKED - 100% PURE COFFEE</div>
+    <div class="weight-text"> NET WT 10 OZ (283g)</div>
+    <div class="bustello-lid"></div>
   	</div>
+  
   <div class="container">
     <div class="handle"></div>
   	<div class="cafetera"></div>
